# goldmine-quik-gateway

./: CMakeLists.txt  exceptions.h  log.cpp  log.h  main.cpp  version.h
binary/: byte_array.cpp  byte_array.h  bytearraybuilder.cpp  bytearraybuilder.h  bytearrayparser.cpp  bytearrayparser.h  rawbytearrayparser.cpp  rawbytearrayparser.h
core/: broker.cpp  broker.h  brokerserver.cpp  brokerserver.h  client.cpp  client.h  dataimportserver.cpp  dataimportserver.h  datasink.cpp  datasink.h  eventloop.cpp  eventloop.h  quotesourceserver.cpp  quotesourceserver.h  quotetable.cpp  quotetable.h  xlparser.cpp  xlparser.h
core/brokers/: virtualbroker.cpp  virtualbroker.h
core/brokers/quikbroker/: quikbroker.cpp  quikbroker.h
core/trans2quik/: trans2quik.cpp  trans2quik.h
core/xltable/: xlparser.cpp  xlparser.h  xltable.cpp  xltable.h
goldmine/: data.h
tables/: alldealstableparser.cpp  alldealstableparser.h  currentparametertableparser.cpp  currentparametertableparser.h  tableparser.h  tableparserfactoryregistry.cpp  tableparserfactoryregistry.h
tests/: brokerserver_test.cpp  quotesourceserver_test.cpp  test.cpp  virtualbroker_test.cpp  xl_test.cpp
tests/mocks/: fakebroker.cpp  fakebroker.h
time/: timesource.cpp  timesource.h
ui/: mainwindow.cpp  mainwindow.h
